--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     <meta name="twitter:image" content="https://toolmonsters.com/images/og-image.png">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <!-- Favicon - Remplace la ligne existante par ces lignes -->
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
+    <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="apple-touch-icon" href="images/favicon.png">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;700&family=VT323&display=swap" rel="stylesheet">
