--- a/index.html
+++ b/index.html
@@ -815,6 +815,7 @@
     <div class="rift-divider"></div>
 
     <section class="services-section grid-section" id="services">
+        <h2 class="gallery-title">WHAT WE DO</h2>
         <div class="services-grid">
             <div class="service-card" onclick="playClick(); window.location.href='#transmission';">
                 <div class="icon-retro">[ BUILD ]</div>
@@ -840,7 +841,7 @@
     <div class="rift-divider"></div>
 
     <section class="hero-break">
-        <h2 class="gallery-title">SOME TEMPLATES.</h2>
+        <h2 class="gallery-title">SOME TEMPLATES</h2>
         
         <div class="gallery-container">
             <!-- Flèche gauche -->
