--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script id="warmly-script-loader" src="https://opps-widget.getwarmly.com/warmly.js?clientId=1264090ee72dbb754952423b07bed648" defer></script>
     
     <!-- SEO Meta Tags -->
     <title>ToolMonsters - AI Automation That Saves Hours & Boosts Revenue</title>
