--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="images/fav.png">
-    <script id="warmly-script-loader" src="images/https://opps-widget.getwarmly.com/warmly.js?clientId=1264090ee72dbb754952423b07bed648" defer></script>
+    <script id="warmly-script-loader" src="https://opps-widget.getwarmly.com/warmly.js?clientId=1264090ee72dbb754952423b07bed648" defer></script>
     <title>Tool Monsters | B2B Workflows</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
