--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
 
              <a href="https://yonathantoolmonsters.substack.com/p/send-custom-decks-to-website-visitors" target="_blank" class="card">
                 <div class="card-tools">
-                    <img src="images/Warmly.png" alt="Warmly">
+                    <img src="images/warmly.png" alt="warmly">
                     <img src="images/perplexity.png" alt="Perplexity">
                     <img src="images/gamma.png" alt="Gamma">
                 </div>
